hdone/objects/DataFileConnector__c.object
<CustomObject>
    <description>Records associated with a DataFile</description>
    <fields>
        <fullName>AddressTypeIdFormula__c</fullName>
        <description>Used for Salesforce to Salesforce lookup connection</description>
        <formula>IF(NOT(ISBLANK(Address_Type__c)), 
CASE( Address_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Address_Type__c), 
&quot;HealthDetail&quot;, Address_Type__r.ExternalId__c, &quot;Error&quot;) , 
NULL)

/* Checks to see if Primary record is shared from customer org or Master org 
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddressTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to AddressType object</description>
        <inlineHelpText>Lookup to AddressType object</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>DataFileConnectors</relationshipLabel>
        <relationshipName>DataFileConnectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact</description>
        <inlineHelpText>Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DataFileConnectors</relationshipLabel>
        <relationshipName>DataFileConnectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFileIdFormula__c</fullName>
        <description>DataFileId formula</description>
        <formula>IF(NOT(ISBLANK( DataFile__c )), 
CASESAFEID( DataFile__c ), 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DataFileId formula</inlineHelpText>
        <label>DataFileIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFile__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Data File record appeared on</description>
        <inlineHelpText>Data File record appeared on</inlineHelpText>
        <label>DataFile</label>
        <referenceTo>DataFile__c</referenceTo>
        <relationshipLabel>DataFileConnectors</relationshipLabel>
        <relationshipName>DataFileConnectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id</description>
        <externalId>true</externalId>
        <inlineHelpText>External id</inlineHelpText>
        <label>ExternalId</label>
        <length>55</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifierTypeIdFormula__c</fullName>
        <formula>IF(NOT(ISBLANK( Identifier_Type__c )), 
CASE( Identifier_Type__r.SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Identifier_Type__c), 
&quot;HealthDetail&quot;, Identifier_Type__r.ExternalId__c, &quot;Error&quot;) , 
NULL) 

/* Checks to see if Primary record is shared from customer org or Master org 
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IdentifierTypeIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifier Type</description>
        <inlineHelpText>Identifier Type</inlineHelpText>
        <label>Identifier Type</label>
        <referenceTo>Identifier_Type__c</referenceTo>
        <relationshipLabel>DataFileConnectors</relationshipLabel>
        <relationshipName>DataFileConnectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processing_Step__c</fullName>
        <label>Processing Step</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NewProviderDirectoryConfirmation</fullName>
                </value>
                <value>
                    <fullName>NewInitialProviderConfirmation</fullName>
                </value>
                <value>
                    <fullName>UpdateConfirmationSource</fullName>
                </value>
                <value>
                    <fullName>CreateConfirmationSourceAndIdTypes</fullName>
                </value>
                <value>
                    <fullName>CreateAuditSettingOnly</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>AuditSettingCreated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedObjectType__c</fullName>
        <description>Displays type of related object</description>
        <formula>TEXT( Identifier_Type__r.IdType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type for related object</inlineHelpText>
        <label>RelatedObjectType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteAddressTypeId__c</fullName>
        <description>Remote AddressType Id</description>
        <externalId>true</externalId>
        <label>RemoteAddressTypeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteDataFileId__c</fullName>
        <description>Remote DataFile Id</description>
        <inlineHelpText>Remote DataFile Id</inlineHelpText>
        <label>RemoteDataFileId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoteIdentifierTypeId__c</fullName>
        <externalId>true</externalId>
        <label>RemoteIdentifierTypeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom MetaData Types to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom MetaData Types</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used to indicate status of value on data file</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                    <default>true</default>
                    <label>Change</label>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Incorrect</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of data on file</description>
        <inlineHelpText>Type of data</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DataFileConnector</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DFC-{0000000000}</displayFormat>
        <label>DataFileConnector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataFileConnectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>